qmlls: fix formatting of comments

Fix formatting of comments in qmlls by not formatting a DomItem
that was constructed with the "WithScriptExpression" option.

Instead, create a new Dom representation without the problematic
option.

This is required to fix the CI failure of the 'qmlls: fix QmlObject and
type annotation completion' commit in the relation chain.

Fixes: QTBUG-120484
Change-Id: Ic474728455a4938b0e28f4bd4f759d9fc7efef24
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit ff6d16d58bef108b7bbe35aa8e9d79dd3a2ea872)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>