tests/auto/qml/qmlformat/data/commentInQmlObject.formatted.qml
@@ -1,0 +1,5 @@
+import QtQml
+
+// hello world
+QtObject {
+}
